# advprog

./: README.md
Build Time/advprog-tutorial-build-time-skeleton-casetrack/skeleton/: README.md  caseTrack.cpp
Build Time/advprog-tutorial-build-time-skeleton-matvec/skeleton/: CMakeLists.txt  README.md  matvec.cpp
Build Time/advprog-tutorial-build-time-solution-casetrack/solution/: README.md
Build Time/advprog-tutorial-build-time-solution-matvec/solution/: CMakeLists.txt  matvec.cpp  testmatvec.cpp
Data Types/: ArrayVectorCheatSheet.md
Functions/advprog-tutorial-functions-solution-gcd/solution/: README.md  gcd.cpp
Functions/advprog-tutorial-functions-solution-matvec/solution/: README.md  matvec.cpp
OOP1/advprog-tutorial-oop1-skeleton-onlinemut/skeleton/: CMakeLists.txt  Course.cpp  Course.h  Student.cpp  Student.h  StudentCard.cpp  StudentCard.h
OOP1/advprog-tutorial-oop1-skeleton-pansimul/skeleton/: README.md  main.cpp  person.cpp  person.h
OOP1/advprog-tutorial-oop1-solution-onlinemut/solution/: Course.cpp  Course.h  README.md  Student.cpp  Student.h  StudentCard.h  main.cpp
OOP1/advprog-tutorial-oop1-solution-pansimul/solution/: person.cpp  person.h
OOP2/advprog-tutorial-oop2-solution-onlinemut/solution/: Course.cpp  Course.h  Curriculum.cpp  Curriculum.h  Lecture.cpp  Lecture.h  Practical.cpp  Practical.h  Student.cpp  Student.h  main.cpp
Optimization/advprog-tutorial-optimization-skeleton-mm_mult/skeleton/: CMakeLists.txt  Matrix.h  mm_multiplication.cpp
Optimization/advprog-tutorial-optimization-skeleton-pansimul/skeleton/: CMakeLists.txt  (+3 more)
(+36 files in other folders)
